# FeatureDetector

./: .gitignore  CMakeLists.txt  FeatureDetector.sln  README.md  SConstruct
FeatureDetector/: FeatureDetector.vcxproj  FeatureDetector.vcxproj.filters
src/: Main.cpp
src/x86/: CMakeLists.txt  cpu_x86.cpp  cpu_x86.h  cpu_x86_Linux.ipp  cpu_x86_Windows.ipp
